deployments/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gopher-quotes-api-svc
spec:
  selector:
    app: gopher-quotes-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gopher-quotes-frontend-svc
spec:
  selector:
    app: gopher-quotes-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gopher-quote-stats-svc
spec:
  selector:
    app: gopher-quote-stats
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
