deployments/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gopher-quotes-ingress
  annotations:
    nginx.ingress.kubernetes.io/app-root: /
spec:
  ingressClassName: nginx
  rules:
  - host: ""
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: gopher-quotes-frontend-svc
            port:
              number: 80
